Done optional task with git revision and branch name in version.html file

--- a/config_templates/version.html
+++ b/config_templates/version.html
@@ -6,6 +6,7 @@
 <body>
 ${project.groupId}:${project.name}:${project.version}<br/>
 configDir=${masterjava.config}<br/>
+Git revision: ${buildNumber}, Git branch: ${scmBranch}<br/>
 <a href="https://github.com/JavaWebinar/masterjava">Многопоточность. Maven. XML. Веб сервисы.</a>
 </body>
 </html>
